--- a/style.css
+++ b/style.css
@@ -24,3 +24,21 @@ div.red {
 div.blue {
     background-color: blue;
 }
+
+.boxJumper{
+    width: 50px;
+    height: 50px;
+    background-color: blue;
+    position: absolute;
+    bottom: 50%;
+    left: 30px;
+}
+
+.boxEnnemy{
+    width: 50px;
+    height: 50px;
+    background-color: red;
+    position: absolute;
+
+    right: 30px;
+}
